@@ -2,13 +2,25 @@
 Hash: SHA256
 
 DIST autogen-5.15.tar.xz 915252 SHA256 cc2a9e24b8b5e4eb74a88519189fd0978bf88fe22af6fe311781e6891098b726 SHA512 cc4cf076324f367c7ada395b21c2d87208cab96dc19bc734a3c462a661090d466aae40a2266e9a472e8f5924b8c32d579af8988bfee53a773aa77c52c846cb1c WHIRLPOOL e008c0012a7475e366425ff0a049b4b25d6fa1701141385497f8c15491b26654844fce36d8774d6378e6386c1fe9cb921400089a4679f88ab3e63429e2cf2eb2
+DIST autogen-5.17.3.tar.xz 999240 SHA256 7bbea9c522ea4c7c80153c8b998eb603295bdce0a622cac36c9c84c87cf3497c SHA512 5a4eec4dbf34b7e398648c65c4c90ae96a5b3ed45a455249cdc60035bf0ce76ac0539160135686fd612d48fbd1951315f8a0acc62cf7f6ec7506cb433d799a13 WHIRLPOOL b8ddf7dbcfd1e8b751e4ada2706ba00fa0fce29f20c4180a3d8d2665c118c2c85ae0bc20486a2394eb7b280777db8fbef397fc9e5a5c198e00eda73624ead1ee
 EBUILD autogen-5.15.ebuild 766 SHA256 3c58463ab66530988b8ebd6b35e23a27486fbd9ee61cc4400c4d1ebab320aad8 SHA512 407d16de973abb36b559b065ad5cdffad1da635131f893f78930e58cd34165ef48d6bc90fb5b68a016dfed665142f6347f0be0d1f6caec866ddba8050db24b6f WHIRLPOOL 35b10f1118068c9ee77ab35637bc2b9d8738a879638ffa8bd952fe79915684544f5cfcbdca34099989b064c9b310c9a4e83ca1350129e713e4313b3eab5f28be
-MISC ChangeLog 10721 SHA256 6f9e57259aa9c7ccd895f92f6cbb6c09aab1dd27b968468a06952473e8faf5c9 SHA512 1bc10d2ccfe75a5172128764bab2e691531d5860421d8722439930220b39d178b2f93d08d8191a1a0bdba9890cead5091953e648be9befbf71724b7c6117da1a WHIRLPOOL c913cba56fecc533c9ff37f1c88161749007f61feb8869ca294960227946e47ce653caadfbffa7496f4bbc4e98262878bc9266631214aee4cfecf4d9993fe530
-MISC metadata.xml 162 SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a SHA512 2a857e10b277827773a6c7967e070d7bfff23d75f44fa4d4fa8a7339df3225e6dba512a865d91c9c55bdb013dafdce85dface1b845acfbb5473e232666cdda45 WHIRLPOOL f7586c1570803b3e646f0be89ba6c767e82ec6889ef92d15f62a38f1410ed9d82c36892e5e83f694471959783d0d5ad667f1a39b7eb51f2080c269d5fa23d819
+EBUILD autogen-5.17.3.ebuild 782 SHA256 ef4783af70bb5f887a9441e0330a8cb8f4bc13f80f50227d0f04185bead2ee94 SHA512 f1d0eb875f738379a157b3ef0ab9d7b66e8f1f4ea2b6e927eabd9c859e33e2fd7f7319aeaff868ade72ea223a05443a8c2e2165c08f6c57bf3d57e9afa2c0845 WHIRLPOOL c88012f43b4ae7c688883eb0d0d378978b4729893f89f25a4c8b434a148e9814b3adc507742d414c41f0c8bfbd40f717bf3339f23693f6555fb2edd4347d9f64
+MISC ChangeLog 10975 SHA256 c943a0de34e3cd7b0760619348845acf5d831eb666d9070ed678abc9b6e3f3e5 SHA512 2aa99f51ebce50278d28c42b9016687dc24f6006f98291cdaf50503236ad00563204e5dfe61048835a4de83ce228d2e1dcdc53c11414603a894cc8c40054caf4 WHIRLPOOL caa4ce32a61b3009dbd2fc35a23789f1f7ccf3e2fc0335e51c435bdda4e81f4e57c299fda56ba1c3fe9d93fe473b653e071dfeddc92cd6bf89210c56829e7475
+MISC metadata.xml 274 SHA256 4eb3a3a37e0116dd5be76d88e4bd9d9b2bb89a3562ece557b335aef34679c1f9 SHA512 bc87e7c04fc716952993ffb3d01ec418315ba48e42f665fbbceca282409efa1c37e6fb0813c07dbe66a1cbb5bbb7a3f3ea01670dfc5980ed680be367a2037cd0 WHIRLPOOL e5f50e9eb5dff3f0d681bdaf29a71670a8fa5b2dbe2f4d3935dc84d575637edba62b495dbcb78f68d43ab62f6567bd1f2b6bb39b58750ee5cc8781571dae6786
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEll/YACgkQ/ejvha5XGaNt+wCfYqyGTPlPC8KcH67ZUmXk9iW/
-nGYAmQGXzNe6YRRk+3Z4E+fA08T93zfG
-=Vbl6
+iQIcBAEBCAAGBQJRagr+AAoJELEHsLL7fEFWkFIP/jfDmlfy9y+FYnpZThyFR9R1
+lrO9K6w0SV13KJLTl/Lkyyx8bffPrG/+Cui7nwWXJtwVn1OYIBcPcq5P+2BoyuZq
+QvzdC02WXxkWTIw0ME3jRtE3eOgeq6Zmk/25cBPtTHSacipYK8KR7ZxVphWCuNKt
+feIlLgGGYCX7pxeL5ArXwQEZLmFYZCdSBa5n5ehvxbPXI7dAtCrhWhPwnlkRVRx+
+x7+4G/hICrSldNlafkAYGOG5VJffEG3EyDaygTdz7eZVrg4cpQEbxFxrj8nV6Lod
+f7A81//8BVD0V/3zZqHWoqQnfj4FWcjjg6hPfOH5UCipNKWSf6lt2uh6xucmGstA
+NiRIHPzOX7TS5MoB0di2SAeRiuFWm2Q8pZUo43JsaYn9dAsbkxNj9wzelFXHG90B
+ySrlxEUT0vB+GLH+qrxkS+i2m/S5L61abz6jNj+vmEipaTbWkc1WYv5JNeCUye0D
+lUmiLmKtlVgoVhHRkJRwxqz5ZFYBHwFaaBjXb0tw64Q65X1b4khtkJF804E1C5he
+yYbrIvdoqT/A+3AuaL7ZtMUeVjRPhzimp1vq0GzvckCPMi+UiiaYLvriFp9pKs3q
+Y4Y3eTMZl86pU07lVkGE4l9N906K2QkzVrzv6ZRITdkEjUdSzIVjM1GREQ+3u5iz
+A3Eff0ujJXUwSrMiTmIs
+=D9AM
 -----END PGP SIGNATURE-----
