@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>toolchain</herd>
+<use>
+ <flag name='libopts'>install the libopts tarball (a few packages want this for developing)</flag>
+</use>
 </pkgmetadata>
