@@ -1,6 +1,13 @@
 # ChangeLog for sys-devel/autogen
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/autogen/ChangeLog,v 1.92 2013/02/21 03:43:49 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/autogen/ChangeLog,v 1.93 2013/04/14 01:47:05 vapier Exp $
+
+*autogen-5.17.3 (14 Apr 2013)
+
+  14 Apr 2013; Mike Frysinger <vapier@gentoo.org> +autogen-5.17.3.ebuild,
+  metadata.xml:
+  Add USE=libopts to control deletion of libopts tarball #465370 by Martin von
+  Gagern.  Version bump #465372 by Martin von Gagern.
 
   21 Feb 2013; Zac Medico <zmedico@gentoo.org> autogen-5.15.ebuild:
   Add ~arm-linux keyword.
